<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="@color/md_grey_300" />

    <!-- bottom tabs -->
    <RadioGroup
        android:id="@+id/bottomTabGroup"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/md_white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_heightPercent="9%sh">

        <RadioButton
            android:id="@+id/rbHome"
            style="@style/BottomTab"
            android:text="@string/home" />

        <RadioButton
            android:id="@+id/rbRecommendHotel"
            style="@style/BottomTab"
            android:text="@string/recommend_hotel" />

        <RadioButton
            android:id="@+id/rbTripAssist"
            style="@style/BottomTab"
            android:text="@string/trip_assist" />

        <RadioButton
            android:id="@+id/rbWallet"
            style="@style/BottomTab"
            android:text="@string/wallet" />

        <RadioButton
            android:id="@+id/rbProfile"
            style="@style/BottomTab"
            android:text="@string/profile" />

    </RadioGroup>

</com.zhy.android.percent.support.PercentLinearLayout>
